--- a/Comfortable_layout_for_Sakura_control_panel.user.css
+++ b/Comfortable_layout_for_Sakura_control_panel.user.css
@@ -1,4 +1,4 @@
-/* Optimize Sakura control panel for modern screen */
+/* Comfortable layout for Sakura control panel */
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document url-prefix("https://secure.sakura.ad.jp/rscontrol/") {
   body > div > table[width] { width: 900px !important; }
