--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -1,10 +1,14 @@
 /* Google web search tweak */
 @namespace url(http://www.w3.org/1999/xhtml);
 
-@-moz-document url-prefix("https://www.google.com/search"),
-               url-prefix("https://www.google.co.jp/search"),
-               url-prefix("https://www.google.com/#q="),
-               url-prefix("https://www.google.co.jp/#q=") {
+@-moz-document
+  url-prefix("https://www.google.com/search"),
+  url-prefix("https://www.google.com/webhp"),
+  url-prefix("https://www.google.com/#q="),
+  url-prefix("https://www.google.co.jp/search"),
+  url-prefix("https://www.google.co.jp/webhp"),
+  url-prefix("https://www.google.co.jp/#q=")
+{
   /* Result */
   .mw .s { line-height: 1.5 !important; }
 
