Justify the width of form

--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -30,6 +30,7 @@
     left: 0 !important;
     margin: 0 !important;
     padding: 0.8rem 0 !important;
+    width: 100% !important;
     height: auto !important;
     border: none !important;
     background: #fff !important;
