--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -5,7 +5,7 @@
   #AreaBody > :not(#fixedBox):not(#AreaUpperLeft),
   #fixedBox > :not(.search_area_left),
   #AreaUpperLeftInner > :not(#resultsArea),
-  #sw, #eijiro_img, .tango, .ex_sentence, .pr_text,
+  #searchHeader, #sw, #eijiro_img, .tango, .ex_sentence, .pr_text,
   #itemsNumber .smallredfont,
   input[type="image"] {
     display: none !important;
@@ -37,11 +37,12 @@
   }
   .search_box {
     width: 100% !important;
-    padding-right: 8px !important;
+    margin: 0 2em 0 !important;
+    padding: 0.2em 0.4em !important;
   }
   #q {
     font: 22px/1 monospace !important;
-    width: 20em !important;
+    width: 28em !important;
     border: 1px solid #aaa !important;
   }
 
