Fix the issue that navigation button cannot click

--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -97,6 +97,7 @@
   #resultsArea > p:first-of-type {
     font: small/1 sans-serif !important;
     margin: 0 !important;
+    clear: both !important;
     opacity: 0.2 !important;
   }
 }
