--- a/Display_map_in_full_screen_for_X-RAIN.user.css
+++ b/Display_map_in_full_screen_for_X-RAIN.user.css
@@ -28,9 +28,15 @@
 
 
   /* Adjust top menu position */
-  #logo { float: left !important; }
-  .menu { float: right !important; }
-  header > div:empty { display: none !important; }
+  header { display: flex !important; }
+  header div { width: auto !important; }
 
-  #contents { clear: both !important; }
+  #logo { margin-right: auto !important; }
+
+  #logo-img { vertical-align: middle !important; }
+  .logo_cap { display: inline-block !important; }
+
+  .menu { margin: 4px 0.4em 0 0 !important; }
+
+  header > div:empty, .menu br { display: none !important; }
 }
