--- a/Google_web_search_tweak.user.css
+++ b/Google_web_search_tweak.user.css
@@ -21,8 +21,9 @@
   .mw .mfr i { font-style: normal !important; }
 
   /* Missing words and/or Recently visited page */
-  .mw ._Tib   { font: bold large/2 sans-serif !important; }
+  .mw ._Tib   { font: bold larger/2 sans-serif !important; }
   .mw ._Tib s { text-decoration: none !important; }
+  .mw ._Tib s::before { content: "\2718"; color: #c00; }
 
   /* Hacked / Compromised */
   .mw .slp a.fl:-moz-any([href^="/url"], [href^="/support"]):only-child { color: #d00 !important; font-weight: bold !important; }
