Apply comfortable layout

--- a/Cleaner_for_Excite_translation.user.css
+++ b/Cleaner_for_Excite_translation.user.css
@@ -8,6 +8,16 @@
     display: none !important;
   }
 
+  #container {
+    width: auto !important;
+    float: initial !important;
+    margin: 0 !important;
+  }
+
+  #wrapper, #nav, #wrapperInner {
+    width: 80% !important;
+  }
+
   #contents { margin: 0 !important; }
 }
 
