Reserve the space for a horizontal rule
It avoids unexpected overwrapping between page elements.

--- a/2ch.net_tweak.user.css
+++ b/2ch.net_tweak.user.css
@@ -2,7 +2,8 @@
 @namespace url(http://www.w3.org/1999/xhtml);
 
 @-moz-document domain("2ch.net"), domain("bbspink.com") {
-  hr, iframe, .banner, [class*='ad--'] { display: none !important; }
+  iframe, .banner, [class*='ad--'] { display: none !important; }
+  hr { visibility: hidden !important; }
 
   h1 {
     font: bold x-large/1.8 sans-serif !important;
