--- a/Add_file_icons_to_links.user.css
+++ b/Add_file_icons_to_links.user.css
@@ -1,7 +1,7 @@
 /* Add file icons to links */
 @namespace url(http://www.w3.org/1999/xhtml);
 
-@-moz-document url-prefix('http:') {
+@-moz-document url-prefix("http:") {
   a[href$=".pdf"], a[href$=".PDF"] { padding-right: 18px !important; background: url("moz-icon://.pdf?size=16") no-repeat right center; }
 
   a[href$=".txt"] { padding-right: 18px !important; background: url("moz-icon://.txt?size=16") no-repeat right center; }
