--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -53,6 +53,9 @@
   .itemPriceDrop .a-text-bold { color: #d00 !important; font: bold 180% sans-serif !important; }
   .itemPriceDrop .a-text-bold::after { content: "\A"; white-space: pre !important; }
 
+  /* ウォッチリストに追加/から削除 */
+  [data-action="s-watchlist-add"]    .a-button-text { font-weight: bold !important; }
+  [data-action="s-watchlist-remove"] .a-button-text { color: #c00 !important; }
 
   /* Opaque elements */
   #kcpApp_feature_div,              /* Kindle無料アプリをダウンロード */
