Use vw, vh and calc() for screen size based layout

--- a/Comfortable_layout_for_Impress_watch.user.css
+++ b/Comfortable_layout_for_Impress_watch.user.css
@@ -4,7 +4,7 @@
 @-moz-document domain("impress.co.jp") {
   /* Loose page width */
   #page-wrap { width: 100% !important; }
-  #page, #global-nav > div { width: 80% !important; }
+  #page, #global-nav > div { width: 80vw !important; }
 
   #main {
     float: none !important;
