--- a/Comfortable_layout_for_Kindle_content_manager.user.css
+++ b/Comfortable_layout_for_Kindle_content_manager.user.css
@@ -4,7 +4,7 @@
 @-moz-document url-prefix("https://www.amazon.co.jp/mn/dcw/myx.html") {
   /* Add more height to "List of collection" box in "Add to collection" screen */
   .bulkAddToCollectionDialog_myx .myx-lgtbox-collection-vertical-scroll.recentCollection_myx {
-    height: 300px !important;
+    height: 30vh !important;
   }
 
   /* Enlarge the count of contents */
