--- a/Display_map_in_full_screen_for_X-RAIN.user.css
+++ b/Display_map_in_full_screen_for_X-RAIN.user.css
@@ -8,7 +8,7 @@
 
   #single-mp-radar, #mp-radar {
     width: auto !important;
-    height: 950px !important;
+    height: calc(100vh - 120px) !important;
   }
 
   #legendPanel1 {
