--- a/Vpass_tweak.user.css
+++ b/Vpass_tweak.user.css
@@ -3,18 +3,18 @@
 
 @-moz-document url-prefix("https://www.smbc-card.com/mem/") {
   #header, #gNavi, #contWrap {
-    max-width: 1200px !important;
-    min-width: 1200px !important;
+    width: 75vw !important;
+    max-width: initial !important;
   }
 }
 
 @-moz-document url-prefix("https://www.smbc-card.com/memx/") {
   #header, #gNavi, .wrapper, .wrap_inner {
-    width: 1200px !important;
+    width: 75vw !important;
     overflow-x: visible !important;
   }
   .left      { width: 220px !important; }
-  .container { width: 950px !important; }
+  .container { width: calc(75vw - 250px) !important; }
 
   body > div[style]:first-child { display: none !important; }
 
