Hide footer for getting more height

--- a/Display_map_in_full_screen_for_X-RAIN.user.css
+++ b/Display_map_in_full_screen_for_X-RAIN.user.css
@@ -39,4 +39,7 @@
   .menu { margin: 4px 0.4em 0 0 !important; }
 
   header > div:empty, .menu br { display: none !important; }
+
+  /* Hide footer */
+  footer { display: none !important; }
 }
