--- a/Vpass_tweak.user.css
+++ b/Vpass_tweak.user.css
@@ -2,8 +2,10 @@
 @namespace url(http://www.w3.org/1999/xhtml);
 
 @-moz-document url-prefix("https://www.smbc-card.com/memx/") {
+  /* Kill loading curtain */
   body > div[style]:first-child { display: none !important; }
 
+  /* Detail table prettify */
   #meisaiTable td {
     padding: 0.4em !important;
     line-height: 1 !important;
@@ -12,6 +14,7 @@
   #meisaiTable td:not([bgcolor]):nth-of-type(2) { text-align: center !important; }
   #meisaiTable td:only-child { background-color: #ffc !important; }
 
+  /* Hide revolving payments banner */
   a[href^="/memx/atrevodiv/"] {
     opacity: 0.2 !important;
   }
