Hide underline for word link

--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -64,6 +64,10 @@
     padding: 0 !important;
   }
 
+  a {
+    border-bottom: none !important;
+  }
+
   .itemPostion {
     margin: 0 !important;
   }
