Kill margin before word class on Japanese -> English

--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -68,6 +68,10 @@
     border-bottom: none !important;
   }
 
+  .ul_je + br {
+    display: none !important;
+  }
+
   .itemPostion {
     margin: 0 !important;
   }
