--- a/Cleaner_for_ALC_Eijiro.user.css
+++ b/Cleaner_for_ALC_Eijiro.user.css
@@ -96,7 +96,7 @@
     padding: 0 !important;
   }
 
-  .label::before { content: "\A"; white-space: pre; }
+  .attr .label::before { content: "\A"; white-space: pre; }
 
   #resultsList > div[style] {
     margin-left: 0 !important;
