Hide the delivery message if it has no child element
The element contains whitespace, therefore ":empty" pseudo-class is not suitable to use.
Since ":empty" does not match an element which contains at least one linebreak and/or whitespace.

CSS Selectors Level 4 defines ":blank" pseudo-class to match empty element that additionally excludes characters affected by whitespace processing.
However this pseudo-class is not yet implemented in even most of modern browsers in now except for ":-moz-only-whitespace".

--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -24,7 +24,7 @@
   [id$="OrderUpdate_feature_div"] .a-alert-container { background-color: #feb !important; }
 
   /* 〇〇日にお届けするには今から〇〇時間以内にお急ぎ便 */
-  #ddmDeliveryMessage {
+  #ddmDeliveryMessage:not(:-moz-only-whitespace) {
     text-align: left !important;
     padding: 0.7em 1.2em 1em !important;
     background: #efe !important;
