Use vw for screen size based layout

--- a/Cleaner_for_Excite_translation.user.css
+++ b/Cleaner_for_Excite_translation.user.css
@@ -15,7 +15,7 @@
   }
 
   #wrapper, #nav, #wrapperInner {
-    width: 80% !important;
+    width: 85vw !important;
   }
 
   #contents { margin: 0 !important; }
