--- a/XUL_Hide_navigation_bar_buttons.user.css
+++ b/XUL_Hide_navigation_bar_buttons.user.css
@@ -1,6 +1,6 @@
 /* [XUL] Hide navigation bar buttons */
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
-#urlbar dropmarker, #urlbar-go-button, #urlbar-reload-button, #urlbar-stop-button,
+#urlbar dropmarker, #urlbar-go-button, #reload-button, #stop-button,
 .search-go-button {
   visibility: collapse !important;
 }
