Bye bye faux-bold font
Support bold font explicitly.
Until now, the bold glyph have been rendered as a smeared version of regular glyph.
To use actual bold font, it requires to specify the bold font name.

--- a/Bye-bye_MS_Mincho.user.css
+++ b/Bye-bye_MS_Mincho.user.css
@@ -5,18 +5,38 @@
   font-family: "ＭＳ Ｐ明朝";
   src: local("HiraMinProN-W3"), local("MS PMincho");
 }
+@font-face {
+  font-family: "ＭＳ Ｐ明朝";
+  font-weight: bold;
+  src: local("HiraMinProN-W6"), local("MS Mincho");
+}
 
 @font-face {
   font-family: "MS PMincho";
   src: local("HiraMinProN-W3"), local("MS PMincho");
+}
+@font-face {
+  font-family: "MS PMincho";
+  font-weight: bold;
+  src: local("HiraMinProN-W6"), local("MS Mincho");
 }
 
 @font-face {
   font-family: "ＭＳ 明朝";
   src: local("HiraMinProN-W3"), local("MS Mincho");
 }
+@font-face {
+  font-family: "ＭＳ 明朝";
+  font-weight: bold;
+  src: local("HiraMinProN-W6"), local("MS Mincho");
+}
 
 @font-face {
   font-family: "MS Mincho";
   src: local("HiraMinProN-W3"), local("MS Mincho");
+}
+@font-face {
+  font-family: "MS Mincho";
+  font-weight: bold;
+  src: local("HiraMinProN-W6"), local("MS Mincho");
 }
