--- a/Comfortable_layout_for_MyJCB.user.css
+++ b/Comfortable_layout_for_MyJCB.user.css
@@ -10,13 +10,13 @@
     width: 100% !important;
   }
 
-  .platformY1 table[summary="カードご利用明細"] {
+  .platformY1 table:not([class]) {
     width: calc(100% - 20px - 15px) !important;
   }
-  .platformY1 table[summary="カードご利用明細"] th,
-  .platformY1 table[summary="カードご利用明細"] th p,
-  .platformY1 table[summary="カードご利用明細"] td,
-  .platformY1 table[summary="カードご利用明細"] td p {
+  .platformY1 table:not([class]) th,
+  .platformY1 table:not([class]) th p,
+  .platformY1 table:not([class]) td,
+  .platformY1 table:not([class]) td p {
     white-space: nowrap !important;
     width: auto !important;
   }
