X-RAIN now supports HTTPS

--- a/Display_map_in_full_screen_for_X-RAIN.user.css
+++ b/Display_map_in_full_screen_for_X-RAIN.user.css
@@ -1,7 +1,7 @@
 /* Display map in full screen for X-RAIN */
 @namespace url(http://www.w3.org/1999/xhtml);
 
-@-moz-document url-prefix("http://www.river.go.jp/x/krd0107010.php") {
+@-moz-document url-prefix("https://www.river.go.jp/x/krd0107010.php") {
   /* Display map in full screen */
   #main { width: 100% !important; }
   #map-contents { width: auto !important; }
