--- a/Customize_the_width_of_a_tab.user.css
+++ b/Customize_the_width_of_a_tab.user.css
@@ -2,5 +2,5 @@
 @namespace url(http://www.w3.org/1999/xhtml);
 
 @-moz-document url-prefix("http://") {
-  code, pre { -moz-tab-size: 4; }
+  code, pre { tab-size: 4; }
 }
