Cosmetic change of formatting

--- a/Change_the_appearance_of_the_cursor_on_a_link.user.css
+++ b/Change_the_appearance_of_the_cursor_on_a_link.user.css
@@ -1,4 +1,9 @@
 /* Change the appearance of the cursor on a link */
 @namespace url(http://www.w3.org/1999/xhtml);
-a[target="_blank"]     { cursor: alias !important; }
-a[href^="javascript:"] { cursor: help !important; }
+
+a[target="_blank"] {
+  cursor: alias !important;
+}
+a[href^="javascript:"] {
+  cursor: help !important;
+}
