--- a/Cleaner_for_Facebook.user.css
+++ b/Cleaner_for_Facebook.user.css
@@ -2,5 +2,7 @@
 @namespace url(http://www.w3.org/1999/xhtml);
 
 @-moz-document domain("facebook.com") {
-  ._5hn6 { display: none !important; }
+  ._5hn6 {
+    display: none !important;
+  }
 }
