--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -3,8 +3,12 @@
 
 @-moz-document domain("www.amazon.co.jp") {
   /* Cart button on top navigation */
-  #nav-cart { opacity: 0.9 !important; }
-  #nav-cart[aria-label$="：0"]:not(:hover) { opacity: 0.3 !important; }
+  #nav-cart {
+    opacity: 0.9 !important;
+  }
+  #nav-cart[aria-label$="：0"]:not(:hover) {
+    opacity: 0.3 !important;
+  }
 
   /* 3rd party reseller */
   #merchant-info > a[href*="seller="] {
@@ -25,8 +29,13 @@
   }
 
   /* このKindle版は読者によって問題が報告されています */
-  #kcqWarning .a-alert-content { font: bold larger/1 sans-serif !important; }
-  #kcqWarning .a-icon, #kcqWarning + i { transform: scale(1.5) !important; vertical-align: middle !important; }
+  #kcqWarning .a-alert-content {
+    font: bold larger/1 sans-serif !important;
+  }
+  #kcqWarning .a-icon, #kcqWarning + i {
+    transform: scale(1.5) !important;
+    vertical-align: middle !important;
+  }
 
   /* 品薄または希少等の理由により参考価格よりも高い価格で販売されている */
   .listPriceAlertPopoverIcon {
@@ -38,7 +47,9 @@
   }
 
   /* 値下がりしました ○○% @wishlist */
-  .itemPriceDrop { font: bold 120% sans-serif !important; }
+  .itemPriceDrop {
+    font: bold 120% sans-serif !important;
+  }
   .itemPriceDrop .a-text-bold {
     color: #d00 !important;
     font: bold 180% sans-serif !important;
