--- a/Comfortable_layout_for_Slideshare.user.css
+++ b/Comfortable_layout_for_Slideshare.user.css
@@ -2,5 +2,7 @@
 @namespace url(http://www.w3.org/1999/xhtml);
 
 @-moz-document domain("www.slideshare.net") {
-  .row { max-width: 85vw !important; }
+  .row {
+    max-width: 85vw !important;
+  }
 }
