--- a/Vpass_tweak.user.css
+++ b/Vpass_tweak.user.css
@@ -3,7 +3,9 @@
 
 @-moz-document url-prefix("https://www.smbc-card.com/memx/") {
   /* Kill loading curtain */
-  body > div[style]:first-child { display: none !important; }
+  body > div[style]:first-child {
+    display: none !important;
+  }
 
   /* Detail table prettify */
   #meisaiTable td {
@@ -11,8 +13,12 @@
     line-height: 1 !important;
     white-space: nowrap !important;
   }
-  #meisaiTable td:not([bgcolor]):nth-of-type(2) { text-align: center !important; }
-  #meisaiTable td:only-child { background-color: #ffc !important; }
+  #meisaiTable td:not([bgcolor]):nth-of-type(2) {
+    text-align: center !important;
+  }
+  #meisaiTable td:only-child {
+    background-color: #ffc !important;
+  }
 
   /* Hide revolving payments banner */
   a[href^="/memx/atrevodiv/"] {
