--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -18,7 +18,7 @@
   }
 
   /* 〇〇日にお届けするには今から〇〇時間以内にお急ぎ便 */
-  #ddmDeliveryMessage:not(:-moz-only-whitespace) {
+  #ddmDeliveryMessage {
     text-align: left !important;
     padding: 0.7em 1.2em 1em !important;
     background: #efe !important;
