--- a/Advertisement_blocker_for_Twitter.user.css
+++ b/Advertisement_blocker_for_Twitter.user.css
@@ -2,5 +2,8 @@
 @namespace url(http://www.w3.org/1999/xhtml);
 
 @-moz-document domain("twitter.com") {
-  .promoted-tweet-heading, .promoted-tweet, .dismissible-container { display: none !important; }
+  .promoted-tweet-heading, .promoted-tweet,
+  .dismissible-container {
+    display: none !important;
+  }
 }
