Cosmetic change of formatting

--- a/2ch.net_tweak.user.css
+++ b/2ch.net_tweak.user.css
@@ -1,7 +1,10 @@
 /* 2ch.net tweak */
 @namespace url("http://www.w3.org/1999/xhtml");
 
-@-moz-document domain("2ch.net"), domain("bbspink.com") {
+@-moz-document
+  domain("2ch.net"),
+  domain("bbspink.com")
+{
   iframe, [class^="banner"], [class*="ad--"], .socialmedia {
     display: none !important;
   }
